perf: replaced `new Random()` with the faster `ThreadLocalRandom.current()`
(cherry picked from commit 2009bc4e85e9a6340a1600527a4fce87af5037a1)